styles/styles.css
article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */
input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }

* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }

body {
    background-color: #BFBFBF;
    color: #fff;
    font-family: 'Open Sans', sans-serif;
    text-align: center;
    margin: 0;
    padding: 0;
}

.wrapper {
    max-width: 1170px;
    margin: 0 auto;
}

header {
    min-height: 100vh;
    background-image: url(../assets/heroBanner.jpg);
    background-size: cover;
    background-repeat: none;
    padding: 80px 0;
}

main {
    background-image: url(../assets/results_background.jpg);
    background-repeat: repeat;
}

h1 {
    font-family: 'Limelight', cursive;
    font-size: 6rem;
    margin: 0;
    text-shadow: 3px 3px 1px #ADADAD;
}

h2 {
    font-size: 1.8rem;
    font-weight: 300;
}

h3 {
    margin-bottom: 0;
    text-transform: uppercase;
}

p {
    font-size: 1rem;
}

footer p {
    margin: 0;
    padding: 20px;
}

a {
    display: inline-block;
    text-decoration: none;
    padding: 10px 0;
    font-size: 0.9rem;
    color: #fff;
}

li {
    list-style: none;
    padding: 10px;
}

a:hover {
    color: #6FD2F2;
    cursor: pointer;
}

form {
    display: inline-block;
    margin-top: 50px;
}

input {
    margin: 10px;
}

input[type='text'] {
    display: block;
    width: 300px;
    height: 60px;
    border: none;
    border-radius: 5px;
    background-color: #EDEDED;
    padding: 10px;
    outline: none;
}

input[type='submit'] {
    width: 232px;
    padding: 10px;
    text-transform: uppercase;
    color: #fff;
    border: 0;
    outline: 0;
    border-radius: 10px;
}

.submitSpecial {
    background: #6FD2F2;
    box-shadow: 1px 1px 0px #66B8D4, 2px 2px 0px #66B8D4, 9px 5px 0px #66B8D4, 10px 0px 0px #66B8D4, 7px 4px 0px #66B8D4, 6px 6px 0px #66B8D4, 7px 7px 0px #66B8D4, 8px 8px 0px #66B8D4, 9px 9px 0px #66B8D4, 10px 10px 0px #66B8D4, 0px 0px 10px rgba(0, 0, 0, 0.4);
    transition: all 0.5s;
}

.submitSpecial:active {
    background: #6DC5E3;
    box-shadow: 1px 1px 0px #66B8D4, 2px 2px 0px #66B8D4, 3px 3px 0px #66B8D4, 4px 4px 0px #66B8D4, 5px 5px 0px #66B8D4, 6px 6px 0px #66B8D4, 7px 7px 0px #66B8D4, 0px 0px 3px rgba(0, 0, 0, 0.8);
}

#playMsg {
    display: none;
    font-family: 'Limelight', cursive;
    margin: 0;
    padding-top: 50px;
    color: #4a4a4b;
    text-transform: uppercase;
}

#shows {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    padding: 50px;
}

.show,
footer {
    background: linear-gradient(to right, #A2A0A0 0%, #656565 100%);
}

.show {
    position: relative;
    margin-bottom: 30px;
    border-radius: 10px;
}

.poster {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.poster:hover {
    opacity: 0.7;
}

.playButton {
    position: absolute;
    top: 45%;
    left: 50%;
    width: 200px;
    transform: translate(-50%, -50%);
    display: none;
}

.show h2 {
    font-size: 1.3rem;
}

.showName,
.showInfo {
    color: #fff;
}

.showInfo span {
    font-weight: 400;
}

#loadMore,
#restart {
    display: none;
    margin: 30px auto;
}

/*MEDIA QUERIES*/

@media (max-width: 480px) {
    h1 {
        font-size: 4rem;
    }
}

@media (max-width: 768px) {
    h1 {
        font-size: 5rem;
    }
    #playMsg {
        display: block;
    }
}

@media (max-width: 940px) {
    header h2 {
        font-size: 1.5rem;
        padding: 0 20px;
    }
}

